src/app.scss
// css/sass refactoring in progress

@import './bootstrap/customizations.scss';

// produces the gradient for the header underlines
@mixin horiz-gradient($color) {
  background-image: -webkit-gradient(linear, 0 0, 100% 0, from(lighten($color, 6%)), to(darken($color, 4%)));
  background-image: -webkit-linear-gradient(left, lighten($color, 6%), darken($color, 4%));
  background-image: -moz-linear-gradient(left, lighten($color, 6%), darken($color, 4%));
  background-image: -o-linear-gradient(left, lighten($color, 6%), darken($color, 4%));
}

@mixin vert-gradient($color) {
  background-image: -webkit-gradient(linear, 100% 0, 0 0, from(lighten($color, 6%)), to(darken($color, 4%)));
  background-image: -webkit-linear-gradient(top, lighten($color, 6%), darken($color, 4%));
  background-image: -moz-linear-gradient(top, lighten($color, 6%), darken($color, 4%));
  background-image: -o-linear-gradient(top, lighten($color, 6%), darken($color, 4%));
}

// import the main font
@at-root {
  @font-face {
    font-family: 'HK Grotesk';
    src: url('fonts/HKGrotesk-Light.eot');
	  src: url('fonts/HKGrotesk-Light.eot?#iefix') format('embedded-opentype'),
		url('fonts/HKGrotesk-Light.woff2') format('woff2'),
		url('fonts/HKGrotesk-Light.woff') format('woff'),
		url('fonts/HKGrotesk-Light.ttf') format('truetype'),
        url('fonts/HKGrotesk-Light.svg#HKGrotesk-Light') format('svg');
    font-weight: normal;
    font-style: normal;
  }

  @font-face {
    font-family: 'HK Grotesk';
    src: url('fonts/HKGrotesk-SemiBold.eot');
    src: url('fonts/HKGrotesk-SemiBold.eot?#iefix') format('embedded-opentype'),
      url('fonts/HKGrotesk-SemiBold.woff2') format('woff2'),
      url('fonts/HKGrotesk-SemiBold.woff') format('woff'),
      url('fonts/HKGrotesk-SemiBold.ttf') format('truetype'),
      url('fonts/HKGrotesk-SemiBold.svg#HKGrotesk-SemiBold') format('svg');
    font-weight: bold;
    font-style: normal;
  }
}

html, body {
    height: 100%;
    min-height: 100%;
}
body {
  background: url('./images/bg.png') top center no-repeat #f7f7f7;
    // padding-top: 222px;

    &.nav-pad {
      padding-top: 165px;
    }
}

main {
  padding-bottom: 90px;
}

strong {
  color: $gray-darker;
}

a, a:hover, a:focus, a:active {
  text-decoration: underline;
}

.navbar-default {
  padding-top: 30px;
  padding-bottom: 15px;
}

.navbar-default .navbar-nav > li > a {
  font-size: 16px;
  font-weight: bold;
  text-decoration: none;

  &.btn {
    background: $btn-primary-bg;
    color: #fff;
    line-height: 40px;
    margin: 30px 0;
    padding: 0 20px;
  }

  &.btn:hover, &.btn:focus, &.btn:active {
    background: darken($btn-primary-bg, 10%);
  }
}

.navbar-brand {
  position: relative;
  left: -4px;
  padding: 0;
  height: 111px;
  margin-top: -9px;
  margin-right: 4px;
}

.dropdown-menu > li > a {
  font-size: 18px;
  text-decoration: none;
}

.dropdown-menu {
  border-radius: 0;
  -webkit-box-shadow: 0 0px 18px rgba(0, 0, 0, 0.075);
  box-shadow: 0 0px 18px rgba(0, 0, 0, 0.075);
}

.dropdown-menu .divider {
  margin: 6px 0;
}

.nav > li > a {
  padding: 0;
  margin: 35px 10px;
  line-height: 30px;
}

.navbar-default.on-scroll {
  background: rgba(247, 247, 247, 1);
  padding-top: 10px;
  padding-bottom: 0;
  border-bottom: 1px solid #eee;
  -webkit-box-shadow: 0 0px 18px rgba(0, 0, 0, 0.02);
  box-shadow: 0 0px 18px rgba(0, 0, 0, 0.02);

  .navbar-brand, .navbar-brand img {
    height: 74px;
    margin-right: 19px;
  }

  .navbar-nav > li > a {
    margin-top: 15px;
    margin-bottom: 0;

    &.btn {
      margin: 10px 0;
    }
  }
}

.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  border-bottom: 2px solid $gray-darker;
}

// responsive text size


@media (max-width: $screen-md-max) {
  body {
    font-size: ceil(($font-size-base * 0.80));
  }
}
@media (max-width: $screen-sm-max) {
  body {
    font-size: ceil(($font-size-base * 0.55));
  }
}
@media (max-width: $screen-xs-max) {
  body {
    font-size: ceil(($font-size-base * 1));
  }
}

.margin-top-none {
  margin-top: 0;
}


// body .nav a.btn-primary.btn {
//   @include vert-gradient($brand-primary);
// }

.page-header {
  position: relative;
  padding-bottom: 39px;
  border: none;

  &:before {
    content : "";
    position: absolute;
    left    : 0;
    bottom  : 0;
    height  : 5px;
    width   : 54px;
    // border-bottom: 4px solid $brand-primary;
    @include horiz-gradient($brand-primary);
  }

  &.yellow:before {
    @include horiz-gradient(#eb9b33);
  }

  &.red:before {
    @include horiz-gradient(#d848a2);
  }

  &.green:before {
    @include horiz-gradient($state-success-bg);
  }
}

.event-list {
  a {
    color: $gray-dark;
    text-decoration: none;

    &:hover, &:focus {
      text-decoration: underline;
    }
  }
  dt {
    font-size: .8em;
    text-align: left;
  }
  dd {
    height: 72px;
    margin-bottom: 15px;
    // display: block; /* Fallback for non-webkit */
    // display: -webkit-box;
    // -webkit-line-clamp: 2;
    // -webkit-box-orient: vertical;
    // overflow: hidden;
    // text-overflow: ellipsis;
  }
}

.news-feed {
  a {
    color: $gray-dark;
    text-decoration: none;

    &:hover, &:focus {
      text-decoration: underline;
    }
  }
  li {
    height: 72px;
    margin-bottom: 15px;
  }
}

footer {
  font-size: 14px;
  background: #eeeeef;
  color: #7a8592;
  padding-top: 100px;
  padding-bottom: 10px;

  a {
    color: #7a8592;
    // text-transform: uppercase;
    text-decoration: none;
  }
  a:hover, a:focus {
    color: #7a8592;
    text-decoration: underline;
  }

  ul {
    // font-size: 12px;
    margin-bottom: 60px;
  }

  li {
    margin-bottom: 10px;
  }

  strong {
    color: $gray-dark;
  }
}

// adds a fade to the dropdowns
.open > .dropdown-menu {
  animation-name: slidenavAnimation;
  animation-duration:.2s;
  animation-iteration-count: 1;
  animation-timing-function: ease;
  animation-fill-mode: forwards;

  -webkit-animation-name: slidenavAnimation;
  -webkit-animation-duration:.2s;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: ease;
  -webkit-animation-fill-mode: forwards;

  -moz-animation-name: slidenavAnimation;
  -moz-animation-duration:.2s;
  -moz-animation-iteration-count: 1;
  -moz-animation-timing-function: ease;
  -moz-animation-fill-mode: forwards;
}
@keyframes slidenavAnimation {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@-webkit-keyframes slidenavAnimation {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.form-control {
  background: transparent;
  border-radius: 0;
  border-top: none;
  border-right: none;
  border-left: none;
  -webkit-box-shadow: none;
  box-shadow: none;

  &:focus {
    border-color: $gray-dark;
    border-width: 2px;
    outline: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
}

.email-signup {
  margin-top: 60px;

  .btn.btn-signup {
    font-size: .75em;
    font-weight: bold;
    margin-bottom: 5px;
    padding: 8px 24px 6px;
  }
}

@mixin placeholder-style() {
  font-size: .75em;
  text-transform: uppercase;
  color: $gray-dark;

}

::-webkit-input-placeholder { @include placeholder-style(); }
::-moz-placeholder { @include placeholder-style(); } /* firefox 19+ */
:-ms-input-placeholder { @include placeholder-style(); } /* ie */
input:-moz-placeholder { @include placeholder-style(); }

// custom right facing caret
.caret {
  &.right {
    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
    border-left: 4px dashed;
    border-left: 4px solid \9;
  }
}

.well {
  border: none;
  -webkit-box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.03);
  box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.03);

  &.sidebar {
    font-size: .85em;

    @media (min-width: $screen-lg) {
       width: 330px;
    }
    @media (max-width: $screen-md-max) {
       width: 263px;
    }
    @media (max-width: $screen-sm-max) {
       width: 190px;
    }
    @media (max-width: $screen-xs-max) {
       display: none;
    }

  &.sidebar:hover {
    .col-sm-4 {
      position: relative;
    }
    overflow-y: auto;
    max-height: 100%;
    padding-bottom: 13%;
  }

    a {
      text-decoration: none;
    }

    &.on-scroll {
      position: fixed;
      margin-top: -30px;
    }
  }
}


.img-rotate {
  > img {
    opacity: 0;
    margin-left: -30px;
    padding: 0 30px;
    position: absolute;
     -webkit-transition: all 1s linear;
    transition: all 1.5s linear;
  }

  > img.active {
      opacity: 1;
  }
}

